test/type-checking/bad/MissingVariable.cc
int main()
{
  x = 12;

  return 0;
}
